--- a/src/Klottery/Ksnake.css
+++ b/src/Klottery/Ksnake.css
@@ -17,7 +17,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: #bbb8b8;
+    background: transparent;
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%; }
