--- a/src/Klottery/Ksnake.scss
+++ b/src/Klottery/Ksnake.scss
@@ -27,6 +27,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
+    transform-style: preserve-3d;
   }
   &-item.active {
     box-shadow: inset 0 0 10000px 20px rgba(210, 255, 100, 0.77);
@@ -44,9 +45,12 @@
     background-position: center;
     background-size: 100%;
   }
-  &-modal{
+  &-modal {
+    text-align: center;
     z-index: 2;
-    transform: translateY(20%);
+    transform: translateY(-50%);
+    top: 50%;
+    position: absolute;
   }
   &-modalBox {
     display: flex;
@@ -57,16 +61,19 @@
     bottom: 0;
     left: 0;
     right: 0;
+    transition: all .45s ease;
+    opacity: 0;
   }
   &-btn {
     border-radius: 5px;
-    border: 2px solid white;
-    color: white;
+    color: #fff;
+    background: red;
     text-align: center;
-    font-size: 18px;
-    height: 40px;
-    line-height: 40px;
-    margin: 10px;
+    font-size: 40px;
+    height: 80px;
+    width: 640px;
+    line-height: 80px;
+    margin: 50px;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
