--- a/src/Klottery/Ksnake.css
+++ b/src/Klottery/Ksnake.css
@@ -61,7 +61,7 @@
     height: 40px;
     width: 300px;
     line-height: 40px;
-    margin: 30px;
+    margin: 30px a;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
