--- a/src/Klottery/Ksnake.scss
+++ b/src/Klottery/Ksnake.scss
@@ -73,7 +73,7 @@
     height: 40px;
     width: 300px;
     line-height: 40px;
-    margin: 30px;
+    margin: 30px auto;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
