total page <10 bug

--- a/src/nextPage/nextpage.scss
+++ b/src/nextPage/nextpage.scss
@@ -47,6 +47,7 @@ $chosen-color: #999999;
     }
     .nextpage-pagelist {
       margin: 0 10px;
+      padding: 0;
       display: flex;
       flex-wrap: nowrap;
       list-style: none;
